# ComputationalGemoetry

./: CMakeLists.txt  README.md  main.cpp
PA1-ConvexHull/: PA1.cpp
Unit_Test/: BBST_test.cpp  Heap_test.cpp  convexhull.cpp  intersection_test.cpp
common/: ConvexHull2D.h  Coordinates.h  Line.h  Point.h  Vec.h
common/Template/: Algorithm.h  BalancedBSTree.h  BinaryHeap.h  BinaryTree.h  ContainerBase.h  List.h  Stack.h  Vector.h  type.h
